--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
+def mapstructVersion = '1.3.1.Final'
+
 repositories {
     mavenCentral()
 }
@@ -23,15 +25,22 @@ dependencies {
     implementation 'com.querydsl:querydsl-apt'
     implementation 'org.projectlombok:lombok'
 
+    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
+
+
 //    runtimeOnly 'com.h2database:h2'
     runtimeOnly 'mysql:mysql-connector-java'
 
     annotationProcessor 'com.querydsl:querydsl-apt'
     annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+
+    testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+
 }
 
 def querydslSrcDir = 'src/main/generated'
