--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,12 @@
 
 spring:
+  redis:
+    host: localhost
+    port: 6379
+
+  profiles:
+    active: local
+
   datasource:
     driver-class-name: org.h2.Driver
     username: sa
